2011-10-18  Albert Chu <chu11@llnl.gov>

	* ipmi-raw/: Fix allocation bug due to much larger _SC_ARG_MAX on
	RHEL6.  Assume max args is 65536 * 2.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* ipmi-sel/, libfreeipmi/src/sel-parse/: Fix the assumesystemevent
	workaround.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* Support Intel Node Manager sensor/SEL events for Intel
	S2600JF/Appro 512X.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/util/ipmi-sensor-and-event-code-tables-util.c (get_management_subsystem_health_event_data2_message):
	Fix corner case output bug.
	
2011-10-17  Albert Chu <chu11@llnl.gov>

	* libfreeipmi/src/sdr-cache/ipmi-sdr-cache-read.c (ipmi_sdr_cache_search_sensor),
	libfreeipmi/src/sdr-cache/ipmi-sdr-cache-defs.h: Fix corner case
	where invalid SDR record could be loaded if shared sensors are
	utilized on event only records.

2011-10-14  Albert Chu <chu11@llnl.gov>

	* etc/freeipmi.conf: Fix example/doc consistency.
	
2011-10-13  Albert Chu <chu11@llnl.gov>

	* ipmi-locate/src/ipmi-locate.h: Fix typo.

	* ipmi-locate/src/ipmi-locate-argp.c: Fix copyright year typo.

	* ipmi-locate/src/ipmi-locate_.h: Renamed from ipmi-locate.h.
	Done for code consistency to how ipmiconsole handles its
	ipmiconsole_.h.
	
2011-10-13  Albert Chu <chu11@llnl.gov>

	* Update copyright globally.
	
2011-10-06  Albert Chu <chu11@llnl.gov>

	* Document HP Itegrity rx3600 workaround.
	
2011-09-23  Albert Chu <chu11@llnl.gov>

	* libipmiconsole/src/Makefile.am: Fix logdir creation bug, should
	not hardcode /var for localstatedir.

	* libipmimonitoring/src/Makefile.am: Properly hide local library
	symbols.

2011-09-26  Diego Elio Pettenò <flameeyes@flameeyes.eu>

	* configure.ac, ipmi-sensors/src/Makefile.am: ipmimonitoring is
	generated referring to /usr/local even if configured with
	--prefix=/usr . This was caused by the broken expansion of the
	sbin path in configure.ac.

	To resolve the issue, this change no longer consider